<?xml version="1.0"?>
<package format="2">
  <name>fsmlite</name>
  <version>0.7.3</version>
  <description>Lightweight finite state machine framework for C++11 </description>

  <maintainer email="tkemmer@computer.org">Thomas Kemmer</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/tkem/fsmlite</url>
  <url type="bugtracker">https://github.com/tkem/fsmlite/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <exec_depend>cpp</exec_depend>
  <doc_depend>doxygen</doc_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
